tests/ui/imports/issue-47623.rs
use self; //~ERROR imports need to be explicitly named

fn main() {}
